--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BIRTHDAY INVITATION</title>
 </head>
 <body>
-    <h1 color="">Top 3 movies according to Vaibhavi</h1>
-    <hr>
-    <h1>1. PAWANKHIND</h1>
-    <img src="image1.jpg" height="300px" width="300px">
-    <h1>2. PHIR HERA PHERI</h1>
-    <img src="image2.jpg" height="250px" width="250px">
-    <h1>3. BHOOL BHULAIYAA 1 AND 2</h1>
-    <img src="image3.jpg" height="250px" width="250px">
-    <image src="image4.jfif" height="250px" width="250px"></image>
-    </body>
-    </html>
+
+    <h1>IT'S MY BIRTHDAY</h1>
+    <H2>ON DATE 28TH JUNE</H2>
+    <img src="images.jfif" WIDTH="500PX">
+    <p> I INVITE YOU TO ATTEND THIS SPECIAL DAY OF MINE. </p>
+    <H2>LOCATION</H2>
+    <P>ABC lodge near xyz complex at 6:00 pm</P>
+    <h2>GENERAL INSTRUCTIONS</h2>
+    <ul>
+        <li>KEEP THIS INVITATION CARD WITH YOU FOR ENTRY</li>
+        <LI>BE SITTED TILL 6:30PM</LI>
+        <LI>CAKE WILL BE CUT AT 8:00PM</LI>
+        <LI> ENJOY YOUR DINNER AFTER CAKE CUTTING CEREMONY</LI>
+        <LI>DON'T FORGET TO BRING GIFTS</LI>
+    </ul>
+
+</body>
+</html>
